Fixing custom scroll-snap on IOS

--- a/extensions/amp-carousel/0.1/amp-carousel.css
+++ b/extensions/amp-carousel/0.1/amp-carousel.css
@@ -101,6 +101,7 @@ amp-carousel .amp-carousel-button.amp-disabled {
   top: 0;
   width: 100% !important;
   scroll-snap-type: mandatory !important;
+  scroll-snap-destination: 0 0;
   /**
    * Hide the scrollbar by tucking it under some padding
    * which gets cut off as it overflows the parent.
@@ -161,6 +162,14 @@ amp-carousel .amp-carousel-button.amp-disabled {
   order: 100000000 !important;
   margin-right: -1px !important;
 }
+
+.-amp-slidescroll-no-snap.-amp-slides-container {
+  scroll-snap-type: none !important;
+}
+
+.-amp-slidescroll-no-snap .-amp-slide-item {
+  scroll-snap-coordinate: none !important;
+}
 /* End SlideScroll */
 
 /* Begin ScrollableCarousel */
@@ -179,13 +188,5 @@ amp-carousel .amp-carousel-button.amp-disabled {
   overflow-x: auto !important;
   overflow-y: hidden !important;
   -webkit-overflow-scrolling: touch !important;
-}
-
-.-amp-slidescroll-no-snap.-amp-slides-container {
-  scroll-snap-type: none !important;
-}
-
-.-amp-slidescroll-no-snap.-amp-slide-item {
-  scroll-snap-coordinate: none !important;
 }
 /* End ScrollableCarousel */
